Bug 1386777 - Interpret autoscroll anchor coordinates correctly when there is a device scale. r=kats

MozReview-Commit-ID: 6caXxWjuqxm